# Pac-Man

./: .gitignore  Makefile  README.md  pac-man.py  pyproject.toml  test_animation.py  test_base_animation.py  test_godmode.py  test_godmode_final.py  test_transition_arcade.py
assets/Sprites/sprites/: README.md
config/: config.json
core/: monitor.py  parser.py  scores.py
display/: _maze_utils.py  ascii_interactive.py  ascii_viewer.py  base_viewer.py  hud_mixin.py  pygame_viewer.py  renderer_mixin.py  screen.py  screens_mixin.py  sprite_mixin.py
docs/: Parsing.txt  idea.txt  infos.txt  planning.txt
entities/: entity.py  ghost.py  ghost_types.py  items.py  player.py
mazegenerator-00001-py3-none-any/mazegenerator/: __init__.py  mazegenerator.py
mazegenerator-00001-py3-none-any/mazegenerator-2.0.1.dist-info/: METADATA  RECORD
scores/1/: highscores.json
scores/3/: highscores.json
