[project]
name = "pac-man"
version = "0.1.0"
authors = [
    { name = "mlorenzo" },
    { name = "avauclai" },
]
description = "A Pac-Man game in Python for a 42 project"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce",
    "pydantic",
    "windows-curses ; sys_platform == 'win32'",
]

[project.scripts]
pac-man = "pac-man:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "display", "entities"]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
